0.x.x 
	- Added /close and /quit commands.
	- Fixed dead-lock involving the "Close" menu item for connections that are still connecing.
	- 
0.5.0 
	- First release