@@ -35,9 +35,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #include "DCStatusBar.h"
 
-DCStatusBar::DCStatusBar(BRect frame, int32 height, int32 style)
+DCStatusBar::DCStatusBar(BRect frame, int32 height)
 	: BView(BRect(frame.left, frame.bottom - height, frame.right, frame.bottom),
-			"statusbar", B_FOLLOW_LEFT_RIGHT | B_FOLLOW_BOTTOM,B_WILL_DRAW), fStyle(style)
+			"statusbar", B_FOLLOW_LEFT_RIGHT | B_FOLLOW_BOTTOM, B_WILL_DRAW)
 {
 	SetViewColor(216, 216, 216);
 }
@@ -45,25 +45,67 @@ DCStatusBar::DCStatusBar(BRect frame, int32 height, int32 style)
 void 
 DCStatusBar::Draw(BRect frame)
 {
-	if (fStyle == STATUS_VISION_STYLE)
+	// Draw the main border
+	SetDrawingMode(B_OP_COPY);
+	SetHighColor(131, 131, 131, 255);
+	StrokeLine(BPoint(frame.left, Bounds().top), BPoint(frame.right, Bounds().top));
+	SetHighColor(255, 255, 255, 255);
+	StrokeLine(BPoint(frame.left, Bounds().top + 1), BPoint(frame.right, Bounds().top + 1));
+	
+	
+	float left = 3;
+	float width = 0;
+	float bottom = Bounds().bottom;	// shorthand
+	BString * str = NULL;
+
+	for (int32 i = 0; i < fFieldList.CountItems(); i++)
 	{
-		SetDrawingMode(B_OP_COPY);
-  		SetHighColor(131, 131, 131, 255);
-  		StrokeLine(BPoint(frame.left, Bounds().top), BPoint(frame.right, Bounds().top));
-  		SetHighColor(255, 255, 255, 255);
-  		StrokeLine(BPoint(frame.left, Bounds().top + 1), BPoint(frame.right, Bounds().top + 1));
-	}
-	else if (fStyle == STATUS_WINDOZE_STYLE)
-	{
-		SetDrawingMode(B_OP_COPY);
-  		SetHighColor(255, 255, 255, 255);
-  		StrokeLine(BPoint(frame.left, Bounds().top), BPoint(frame.right, Bounds().top));
-  		SetHighColor(131, 131, 131, 255);
-  		StrokeLine(BPoint(frame.left, Bounds().top + 1), BPoint(frame.right, Bounds().top + 1));
+		str = fFieldList.ItemAt(i);
+		width = StringWidth(str->String());
+		SetDrawingMode(B_OP_OVER);
+		SetHighColor(0, 0, 0, 255);
+		DrawString(str->String(), BPoint(left, bottom - 3));
+		if (i != fFieldList.CountItems() - 1)	// not the last item?
+		{
+			left += width;
+			left += 3;
+			SetDrawingMode(B_OP_COPY);
+			SetHighColor(255, 255, 255, 255);
+			StrokeLine(BPoint(left + 1, 2), BPoint(left + 1, bottom));
+			SetHighColor(131, 131, 131, 255);
+			StrokeLine(BPoint(left, 2), BPoint(left, bottom));
+			left += 5;
+		}
 	}
 	
-	SetDrawingMode(B_OP_OVER);
-	SetHighColor(0, 0, 0, 255);
-	
+
 	//DrawString("Status Bar (Under construction :)", BPoint(Bounds().left + 2, Bounds().bottom - 2));
+}
+
+void
+DCStatusBar::AddField(const BString & value)
+{
+	BString * str = new BString(value);
+	fFieldList.AddItem(str, fFieldList.CountItems());
+}
+
+void
+DCStatusBar::SetField(const BString & value, int32 index)
+{
+	if ((index >= fFieldList.CountItems()) || (index < 0))	// invalid index
+		return;
+		
+	BString * str = fFieldList.ItemAt(index);
+	fFieldList.SwapWithItem(index, new BString(value));
+	delete str;
+}
+
+void
+DCStatusBar::MakeEmpty()
+{
+	while (fFieldList.CountItems() > 0)
+	{
+		BString * str = fFieldList.RemoveItemAt(0);
+		delete str;
+	}
 }
