@@ -99,6 +99,7 @@ enum
 	STR_OK,
 	STR_CANCEL,
 	STR_ERROR,
+	STR_USERS,
 	
 	STR_ALERT_BAD_NICK,
 	
